// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders without crashing 1`] = `
<div>
  <div
    class="MuiBox-root mui-style-1r2sw3a"
  >
    <nav
      aria-label="pagination"
      class="MuiPagination-root MuiPagination-text mui-style-1xra8g6-MuiPagination-root"
    >
      <ul
        class="MuiPagination-ul mui-style-1c5o7vy-MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-previousNext mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon mui-style-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="ArrowLeftIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m14 7-5 5 5 5z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="page"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-selected MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            1
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 2"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            2
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 3"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            3
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 4"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            4
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 5"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            5
          </button>
        </li>
        <li>
          <div
            class="MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-ellipsis mui-style-1gbolyq-MuiPaginationItem-root"
          >
            …
          </div>
        </li>
        <li>
          <button
            aria-label="Go to page 10"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            10
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-previousNext mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon mui-style-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="ArrowRightIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m10 17 5-5-5-5z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Pagination should return empty div if still loading 1`] = `
<div>
  <div
    class="MuiBox-root mui-style-1r2sw3a"
  >
    <nav
      aria-label="pagination"
      class="MuiPagination-root MuiPagination-text mui-style-1xra8g6-MuiPagination-root"
    >
      <ul
        class="MuiPagination-ul mui-style-1c5o7vy-MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-previousNext mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon mui-style-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="ArrowLeftIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m14 7-5 5 5 5z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="page"
            aria-label="page 1"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled Mui-selected MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            1
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 2"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            2
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 3"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            3
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 4"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            4
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 5"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            5
          </button>
        </li>
        <li>
          <div
            class="MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-ellipsis mui-style-1gbolyq-MuiPaginationItem-root"
          >
            …
          </div>
        </li>
        <li>
          <button
            aria-label="Go to page 10"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-page mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            10
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-previousNext mui-style-1vh76e7-MuiButtonBase-root-MuiPaginationItem-root"
            data-testid="pagination-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon mui-style-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="ArrowRightIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m10 17 5-5-5-5z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
